force-app/main/default/objects/Account/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Stores the unique bank account number associated with the agency.</description>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>