force-app/main/default/objects/Account/fields/BankBranchAddress__c.field-meta.xml
<CustomField>
    <fullName>BankBranchAddress__c</fullName>
    <label>Bank Branch Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>