force-app/main/default/objects/Account/fields/BankCountry__c.field-meta.xml
<CustomField>
    <fullName>BankCountry__c</fullName>
    <label>Bank Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryPicklist</valueSetName>
    </valueSet>
</CustomField>