force-app/main/default/objects/Account/fields/BankNameValue__c.field-meta.xml
<CustomField>
    <fullName>BankNameValue__c</fullName>
    <inlineHelpText>Kindly ensure to enter the complete and correct bank name exactly as mentioned on your Bank Cheque or IBAN details.</inlineHelpText>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>