force-app/main/default/objects/Account/fields/City_O__c.field-meta.xml
<CustomField>
    <fullName>City_O__c</fullName>
    <label>City O</label>
    <length>225</length>
    <type>Text</type>
</CustomField>