force-app/main/default/objects/Account/fields/CommercialLicenseExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>CommercialLicenseExpiryDate__c</fullName>
    <label>Commercial License Expiry Date</label>
    <type>Date</type>
</CustomField>