force-app/main/default/objects/Account/fields/Emirates_National_Id_Expirt_Date__c.field-meta.xml
<CustomField>
    <fullName>Emirates_National_Id_Expirt_Date__c</fullName>
    <label>Emirates / National Id Expirt Date</label>
    <type>Date</type>
</CustomField>