force-app/main/default/objects/Account/fields/Emirates_NationalId__c.field-meta.xml
<CustomField>
    <fullName>Emirates_NationalId__c</fullName>
    <label>Emirates / National Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>