force-app/main/default/objects/Account/fields/Is_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Is_Corporate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Corporate?</label>
    <type>Checkbox</type>
</CustomField>