force-app/main/default/objects/Account/fields/RAY_ID__c.field-meta.xml
<CustomField>
    <fullName>RAY_ID__c</fullName>
    <label>RAY ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>