force-app/main/default/objects/Account/fields/Region_If_city_is_Mumbai__c.field-meta.xml
<CustomField>
    <fullName>Region_If_city_is_Mumbai__c</fullName>
    <label>Region If city is Mumbai</label>
    <length>225</length>
    <type>Text</type>
</CustomField>