force-app/main/default/objects/Account/fields/RERA_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>RERA_Registration_No__c</fullName>
    <label>RERA Registration No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>