force-app/main/default/objects/Account/fields/SAP_Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Vendor_Code__c</fullName>
    <label>SAP Vendor Code</label>
    <length>225</length>
    <type>Text</type>
</CustomField>