force-app/main/default/objects/Account/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Gujrat</fullName>
            </value>
            <value>
                <fullName>Kerla</fullName>
            </value>
            <value>
                <fullName>Northland</fullName>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>