force-app/main/default/objects/Account/fields/SwiftCode__c.field-meta.xml
<CustomField>
    <fullName>SwiftCode__c</fullName>
    <label>Swift Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>