force-app/main/default/objects/Account/recordTypes/Corporate_Cust.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Cust</fullName>
    <active>true</active>
    <label>Corporate Cust</label>
</RecordType>