force-app/main/default/objects/Account/recordTypes/Corporate_Cust_Land.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Cust_Land</fullName>
    <active>true</active>
    <label>Corporate Cust Land</label>
</RecordType>