force-app/main/default/objects/Account/recordTypes/Individual_Cust.recordType-meta.xml
<RecordType>
    <fullName>Individual_Cust</fullName>
    <active>true</active>
    <label>Individual Cust</label>
</RecordType>