force-app/main/default/objects/Account/recordTypes/Individual_Cust_Land.recordType-meta.xml
<RecordType>
    <fullName>Individual_Cust_Land</fullName>
    <active>true</active>
    <label>Individual Cust Land</label>
</RecordType>